java manager working, I hate lwjgl EXPERIMENTAL!!! NOT WORKING!!!